tests/enum_from/compile_fail/variant/invalid_source_enum.rs
use enum_convert::EnumFrom;

enum Source {
    Unit,
}

#[derive(EnumFrom)]
#[enum_from(Source)]
enum Target {
    #[enum_from(Source, NonExistent)] // Invalid source enum
    Unit,
}

fn main() {}
