tests/enum_from/compile_fail/variant/invalid_source_enum.stderr
error: source enum `NonExistent` is not specified in this enum's #[enum_from] annotation
  --> tests/enum_from/compile_fail/variant/invalid_source_enum.rs:10:25
   |
10 |     #[enum_from(Source, NonExistent)] // Invalid source enum
   |                         ^^^^^^^^^^^
